--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "styled": "^1.0.0",
+    "styled-reset": "^4.5.2",
     "vite-plugin-static-copy": "^2.2.0"
   },
   "devDependencies": {
