--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^6.29.0",
     "redux": "^5.0.1",
     "styled": "^1.0.0",
     "styled-reset": "^4.5.2",
