--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_API_KEY = AIzaSyAxpBj5bxPj5STZ1QOwmz_WO5pDBPd31YM
-REACT_APP_AUTH_DOMAIN = donspike-team1.firebaseapp.com
-REACT_APP_PROJECT_ID = donspike-team1
-REACT_APP_STORAGE_BUCKET = donspike-team1.firebasestorage.app
-REACT_APP_MESSAGING_SENDER_ID = 671717975539
-REACT_APP_APP_ID = 1:671717975539:web:7f9db154004986e6471e86
+VITE_API_KEY = AIzaSyAxpBj5bxPj5STZ1QOwmz_WO5pDBPd31YM
+VITE_AUTH_DOMAIN = donspike-team1.firebaseapp.com
+VITE_PROJECT_ID = donspike-team1
+VITE_STORAGE_BUCKET = donspike-team1.firebasestorage.app
+VITE_MESSAGING_SENDER_ID = 671717975539
+VITE_APP_ID = 1:671717975539:web:7f9db154004986e6471e86
