--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
+    "react-redux": "^7.2.9",
     "react-router-dom": "^6.29.0",
-    "redux": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "styled": "^1.0.0",
     "styled-reset": "^4.5.2",
     "vite-plugin-static-copy": "^2.2.0"
