--- a/package.json
+++ b/package.json
@@ -11,17 +11,14 @@
   },
   "dependencies": {
     "components": "^0.1.0",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
     "firebase": "^11.3.1",
     "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^7.2.9",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
-    "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
-    "styled": "^1.0.0",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.15",
     "styled-reset": "^4.5.2",
     "vite-plugin-static-copy": "^2.2.0"
   },
