--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "firebase": "^11.3.1",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
     "redux": "^5.0.1",
-    "styled": "^1.0.0",
+    "styled-components": "^6.1.15",
     "styled-reset": "^4.5.2",
     "vite-plugin-static-copy": "^2.2.0"
   },
