--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "components": "^0.1.0",
     "firebase": "^11.3.1",
     "moment": "^2.30.1",
