--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -23,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
     "redux": "^5.0.1",
+    "storybook": "^8.6.4",
     "styled-components": "^6.1.15",
     "styled-reset": "^4.5.2",
     "vite-plugin-static-copy": "^2.2.0",
@@ -30,6 +33,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@storybook/addon-actions": "^8.6.4",
+    "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-links": "^8.6.4",
+    "@storybook/addon-themes": "^8.6.4",
+    "@storybook/builder-vite": "^8.6.4",
+    "@storybook/react": "^8.6.4",
+    "@storybook/react-vite": "^8.6.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -40,5 +50,10 @@
     "globals": "^15.14.0",
     "typescript": "^5.8.2",
     "vite": "^6.1.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
