--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,7 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "types": ["cypress", "node"],
     "module": "ESNext",
     "skipLibCheck": true,
     "allowJs": true,
@@ -30,5 +31,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "**/*.ts", "cypress.config.js"]
 }
