--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,6 +3,8 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
+    "esModuleInterop": true,
+    "target": "ES6",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
